<?xml version="1.0" encoding="utf-8" standalone="no"?>
<resources>
    <string name="app_name">Seruling</string>
    <string name="toast_message">On or Off</string>
    <string name="settings_ok">ok</string>
    <string name="adjust_sensitivity">Calibrate sensitivity</string>
    <string name="adjust_sensitivity_instructions">Untuk mengatur sensifitas mic dan menghilangkan noise, silakan atur sensitifitas sehingga desibel menunjuk pada 2db.</string>
    <string name="minus_5_db">-5\ndB</string>
    <string name="minus_1_db">-1\ndB</string>
    <string name="plus_1_db">+1\ndB</string>
    <string name="plus_5_db">+5\ndB</string>
    <string name="gain_error_text">Sensitivity correction:</string>
    <string name="gain">0.0</string>
    <string name="sample_rate">Sample Rate</string>
    <string-array name="sample_rate_array">
        <item>8000</item>
        <item>16000</item>
    </string-array>
    <string-array name="instrument">
        <item>seruling</item>
        <item>clarinet</item>
        <item>pianika</item>
    </string-array>
    <string name="instrument">Instrument Available</string>
</resources>

